tests/sema/bad/26_pure_assign_global.sg
let counter:int = 0;

@pure fn bump() -> int {
  counter = counter + 1;
  return counter;
}
